--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
+    "react-select": "^5.10.2",
     "react-type-animation": "^3.2.0",
     "recharts": "^3.3.0",
     "three": "^0.181.0",
