--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^9.4.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "compromise": "^14.14.4",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
